syntax = "proto3";

package events;

option go_package = "github.com/burakmert236/file-processing-system/generated/events";

import "common/common.proto";

message FileUploaded {
    common.FileRef file = 1;
    string temp_path = 2;
}

message FileValidated {
    common.FileRef file = 1;
}

message FileValidationFailed {
    common.FileRef file = 1;
    string message = 2;
}